# ADAM-EDU

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODOS.md  docker-compose.yml  pr_body.txt
backend/: .env.example  AGENTS.md  Dockerfile.worker  langgraph.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1571dcf87c69_phase5_canonical_output_column.py  26812dc7bf5c_initial_phase_1a_data_layer.py  4c8660e9e4d1_issue23_identity_substrate.py  6185b1d0f91e_phase4a_runtime_models.py  97a740b07c66_issue118_checkpoint_migrations_alignment.py  9ee3b0659e9a_issue_205_case_grades.py  9f3e2a1b7c4d_issue139_authoring_course_grounding.py  a6f6d7ac9c2b_issue52_admin_catalog_infra.py  a6fd55f56fbc_issue112_stateful_recovery_phase1.py  b7c8d9e0f1a2_issue180_assignment_courses.py  c1964e5f6a7b_issue196_student_case_resolution.py  c2f8a58d6d1e_issue86_teacher_directory.py  f2a3b4c5d6e7_issue151_available_from.py  (+4 more)
backend/scripts/: seed_manual_grading_fixture.py
backend/sql/: rls_policies.sql
backend/tests/: conftest.py  test_admin_auth.py  test_authoring_progress_resilience.py  test_case_sanitization.py  test_database.py  test_harness_isolation.py  test_internal_tasks.py  test_issue109_db_resilience.py  test_issue110_runtime_profile_guardrails.py  test_issue139_authoring_grounding.py  test_issue195_student_dashboard.py  test_issue196_student_case_resolution.py  test_issue205_teacher_course_gradebook.py  test_issue225_dataset_schema_contract.py  test_issue228_semantic_coherence_and_charts.py  test_issue230_algorithm_mode.py  test_issue230_classification_notebook_variants.py  test_issue237_eda_charts_classification.py  test_issue238_cost_matrix.py  test_issue239_m3_notebook_executor.py  test_issue23_identity_schema.py  test_issue240_classification_tuning_interpretability.py  test_issue242_pedagogical_coherence.py  test_issue243_narrative_grounding.py  test_issue30_auth_perimeter.py  test_issue52_admin_catalog_infra.py  test_issue55_admin_reads.py  test_issue56_admin_writes.py  test_issue57_course_access.py  test_issue86_teacher_directory.py  test_issue88_teacher_courses.py  test_issue90_assignment_deadline_migration.py  test_issue90_teacher_cases.py  test_m3_notebook_classification_hygiene.py  test_m3_notebook_dispatch.py  test_m3_notebook_per_family_prompts.py  test_phase1a_smoke.py  test_phase1b_integration.py  test_phase1b_real.py  test_phase2_fragmentation.py  (+8 more)
(+322 files in other folders)
