[project]
name = "adam-agent"
version = "8.0.0"
description = "ADAM v8.0 — Sistema multi-agente para casos de negocio pedagógicos"
authors = [
    { name = "ADAM Team" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=1.0.0,<2.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-google-genai>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.1",
    "langgraph-sdk>=0.1.57",
    "langgraph-cli",
    "langgraph-api",
    "fastapi>=0.115.0,<1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "PyJWT[crypto]>=2.10.1",
    "scipy>=1.17.1",
    "supabase>=2.23.0",
    "cachetools>=5.0.0",
    "python-json-logger>=2.0.7",
    "langgraph-checkpoint-postgres>=3.0.5",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "case_generator*",
    "shared*",
]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live_llm: tests that require Gemini/network and only run when RUN_LIVE_LLM_TESTS=1",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
    '^src/adam_agent\.egg-info/',
    '^src/agent\.egg-info/',
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
    "mypy>=1.19.1",
    "types-cachetools>=5.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
]
